[gd_scene load_steps=4 format=3 uid="uid://c8dxj3aw3wnuh"]

[ext_resource type="PackedScene" uid="uid://yx0e6j2h537r" path="res://BaseObjects/base_menu.tscn" id="1_4s70r"]
[ext_resource type="Script" path="res://UIMenus/MainMenu/save_menu.gd" id="2_l8bqj"]
[ext_resource type="PackedScene" uid="uid://d166ixo2ko56k" path="res://BaseObjects/settings_edit_field_base.tscn" id="3_fkbjm"]

[node name="SaveMenu" instance=ExtResource("1_4s70r")]
script = ExtResource("2_l8bqj")

[node name="TitleLabel" parent="MarginContainer/VBoxContainer" index="0"]
text = "Gravar"

[node name="ProjectName" parent="MarginContainer/VBoxContainer/MarginContainer/OptionsContainer" index="0" instance=ExtResource("3_fkbjm")]
layout_mode = 2

[node name="Label" parent="MarginContainer/VBoxContainer/MarginContainer/OptionsContainer/ProjectName" index="0"]
text = "Nome do Projeto: "

[node name="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/OptionsContainer/ProjectName" index="1"]
custom_minimum_size = Vector2(350, 0)
text = "Novo Projeto"

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/OtherButtonsContainer" index="0" groups=["return_button"]]
layout_mode = 2
size_flags_horizontal = 6
text = "Voltar"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/OtherButtonsContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 6
text = "Gravar"

[node name="FileDialog" type="FileDialog" parent="." index="2"]
initial_position = 2
size = Vector2i(658, 400)
access = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/OtherButtonsContainer/Save" to="." method="_on_save_pressed"]

[editable path="MarginContainer/VBoxContainer/MarginContainer/OptionsContainer/ProjectName"]
